# bambam

./: .gitignore  README.md  pyproject.toml
rust/: Cargo.toml
rust/bambam/: Cargo.toml  README.md
rust/bambam-core/: Cargo.toml
rust/bambam-core/src/model/: bambam_field.rs  bambam_json.rs  bambam_ops.rs  bambam_state.rs  bambam_typed.rs  mod.rs  time_bin.rs
rust/bambam-core/src/model/destination/: bin.rs  error.rs  filter.rs  iter.rs  mod.rs  range.rs
rust/bambam-core/src/model/output_plugin/: mod.rs  output_config.rs
rust/bambam-core/src/model/output_plugin/isochrone/: geometry_model.rs  geometry_model_config.rs  isochrone_algorithm.rs  isochrone_output_format.rs  mod.rs
rust/bambam-core/src/model/output_plugin/opportunity/: destination_opportunity.rs  mod.rs  opportunity_format.rs  opportunity_ops.rs  opportunity_orientation.rs  opportunity_record.rs  opportunity_row_id.rs
rust/bambam-core/src/model/state/: categorical_mapping.rs  fieldname.rs  mod.rs  multimodal_mapping.rs  multimodal_state_ops.rs  variable.rs
rust/bambam-core/src/util/: date_deserialization_ops.rs  geo_utils.rs  mod.rs
rust/bambam-gbfs/: Cargo.toml
rust/bambam-gbfs/src/: main.rs
rust/bambam-gbfs/src/app/: gbfs_cli.rs
rust/bambam-gbfs/src/app/download/: download_metadata.rs  entry_point.rs  feature_rules.rs  gbfs_record.rs  gbfs_v2_2.rs  gbfs_v2_3.rs  gbfs_v3_0.rs  gbfs_version.rs  mod.rs  ops.rs  run.rs  v3_ops.rs  zone_constraints.rs
rust/bambam-gbfs/src/model/: mod.rs
rust/bambam-gbfs/src/model/constraint/: mod.rs
rust/bambam-gbfs/src/model/constraint/boarding/: builder.rs  config.rs  engine.rs  mod.rs  model.rs  service.rs
rust/bambam-gbfs/src/model/constraint/gbfs_constraint/: builder.rs  config.rs  engine.rs  mod.rs  model.rs  params.rs  service.rs
rust/bambam-gbfs/src/model/constraint/geofence/: builder.rs  config.rs  engine.rs  mod.rs  model.rs  service.rs
rust/bambam-gbfs/src/model/gbfs/: mod.rs  ops.rs  record.rs
rust/bambam-gbfs/src/model/traversal/: mod.rs
rust/bambam-gbfs/src/model/traversal/boarding/: model.rs
rust/bambam-gbfs/src/model/traversal/gbfs_traversal/: builder.rs  config.rs  engine.rs  mod.rs  model.rs  params.rs  service.rs
rust/bambam-gtfs/: Cargo.toml
rust/bambam-gtfs-flex/: Cargo.toml  README.md
rust/bambam-gtfs-flex/src/: agency.rs  calendar.rs  flex_processor.rs  lib.rs  main  main.rs  routes.rs  stop_times.rs  trips.rs
rust/bambam-gtfs-flex/src/app/: gtfs_flex_cli.rs  import_dataset.rs  mod.rs
rust/bambam-gtfs-flex/src/model/: consts.rs  error.rs  feature.rs  mod.rs  ops.rs  params.rs
rust/bambam-gtfs-flex/src/model/constraint/: builder.rs  mod.rs  model.rs  service.rs
rust/bambam-gtfs-flex/src/model/frontier/: builder.rs  model.rs  service.rs
rust/bambam-gtfs-flex/src/model/traversal/flex/: builder.rs  config.rs  mod.rs  model.rs  ops.rs  service.rs
rust/bambam-gtfs-flex/src/test/assets/: query-big.json  query-single.json  query-small.json  valid-zones.csv
rust/bambam-gtfs-flex/src/util/: fs.rs  mod.rs
rust/bambam-gtfs-flex/src/util/zone/: error.rs  graph.rs  id.rs  lookup.rs  lookup_config.rs  mod.rs  record.rs  relation.rs  schedule.rs
rust/bambam-gtfs/src/: lib.rs
rust/bambam-gtfs/src/model/traversal/: mod.rs
rust/bambam-gtfs/src/model/traversal/transit/: builder.rs  config.rs  engine.rs  metadata.rs  mod.rs  model.rs  query.rs  raw_schedule_row.rs  schedule.rs  schedule_loading_policy.rs  service.rs  transit_ops.rs
rust/bambam-gtfs/src/schedule/: bundle_ops.rs  date_mapping_policy.rs  date_mapping_policy_config.rs  gtfs_bundle.rs  missing_stop_matching_policy.rs  schedule_error.rs  sorted_trip.rs
rust/bambam-gtfs/src/schedule/app/: operation.rs
rust/bambam-gtfs/src/schedule/date/: date_ops.rs
rust/bambam-omf/: Cargo.toml
rust/bambam-omf/src/: main.rs
rust/bambam-omf/src/app/: cli_bbox.rs  network.rs  omf_app.rs
rust/bambam-omf/src/collection/: collector.rs  collector_config.rs  collector_ops.rs  error.rs  mod.rs  object_source.rs
rust/bambam-omf/src/collection/filter/: bbox.rs  bbox_row_predicate.rs  mod.rs  row_filter_config.rs  travel_mode_filter.rs
rust/bambam-omf/src/collection/record/: common.rs  during_expression.rs  geometry_wkb_codec.rs  mod.rs  record_type.rs  transportation_collection.rs  transportation_segment.rs
rust/bambam-omf/src/collection/record/segment/: access_restriction.rs  access_restriction_when.rs  class.rs  destination.rs  flags.rs  (+9 more)
rust/bambam-omf/src/collection/taxonomy/: category_tree.rs  taxonomy_builder.rs  taxonomy_model.rs
rust/bambam-omf/src/graph/: component_algorithm.rs  consts.rs  island_detection.rs  mod.rs  omf_graph.rs  segment_ops.rs  segment_split.rs  serialize_ops.rs  summary.rs
rust/bambam-omf/src/util/: bambam-config-omf.toml  fs.rs
rust/bambam-osm/: Cargo.toml
rust/bambam-osm/src/algorithm/: buffer.rs  connected_components.rs
rust/bambam-osm/src/algorithm/clustering/: clustering_rtree.rs
rust/bambam-osm/src/algorithm/consolidation/: consolidation_ops.rs
rust/bambam-osm/src/algorithm/simplification/: simplify_ops.rs
rust/bambam-osm/src/app/network/: mod.rs
rust/bambam-osm/src/app/wci/: way_attributes_for_wci.rs  wci_ops.rs
rust/bambam-osm/src/model/feature/: highway.rs
rust/bambam-osm/src/model/osm/: osm_source.rs
rust/bambam-py/: Cargo.toml
rust/bambam/src/: lib.rs  main.rs
rust/bambam/src/app/: mod.rs
rust/bambam/src/app/gtfs_config/: gtfs_config_error.rs  run.rs
rust/bambam/src/app/gtfs_flex_config/: cli.rs  default_grid_search.json  error.rs  graph_config_type.rs  gtfs_flex_config_type.rs  map_config_type.rs  mod.rs  run.rs
rust/bambam/src/app/oppvec/: app.rs  geometry_format.rs
rust/bambam/src/app/overlay/: app.rs  geometry_column_type.rs  grouping.rs  mod.rs  overlay_operation.rs  overlay_source.rs
rust/bambam/src/model/: builders.rs  mod.rs
rust/bambam/src/model/constraint/: mod.rs
rust/bambam/src/model/output_plugin/: mod.rs
rust/bambam/src/model/state/: fieldname.rs  multimodal_state_ops.rs  variable.rs
rust/bambam/src/model/traversal/: mod.rs
rust/bambam/src/util/: polygonal_rtree.rs
(+132 files in other folders)
