[project]
name = "bambam"
version = "0.1.0"
description = "The Behavior and Advanced Mobility Big Access Model"
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [{ name = "National Laboratory of the Rockies" }]
license = { text = "BSD 3-Clause License Copyright (c) 2025, Alliance for Energy Innovation, LLC" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
keywords = ["access modeling"]
dependencies = [
    "nrel-routee-compass>=0.15.2",
    "tomlkit>=0.11.0,<1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "maturin>=1.0,<2.0",
    # "jupyter-book>=1.0,<2.0",
    # "ruff>=0.1.0,<1.0",
    # "sphinx-book-theme>=1.0.0,<2.0",
    "mypy>=1.0.0,<2.0",
    # "jupyterlab>=4.0.0,<5.0",
    # "boxsdk>=3.0.0,<4.0",
    # "types-requests>=2.28.0,<3.0",
]
osm = [
    "osmnx>=2.0.5,<3.0",
    "rio-vrt>=0.3.1,<1.0",
    "mapclassify>=2.8.1,<3.0",
    "requests>=2.28.0,<3.0",
    "geopandas>=1.1.1,<2.0",
    "shapely>=2.0.0,<3.0",
    "networkx>=3.0,<4.0",
    "folium>=0.14.0,<1.0",
    "pandas>=2.0.0,<3.0",
    "rasterio>=1.3.0,<2.0",
    "matplotlib>=3.7.0,<4.0",
    "numpy>=1.26,<3.0",
    "seaborn>=0.12.0,<1.0",
]
all = ["bambam[osm]", "bambam[dev]"]

[project.urls]
Homepage = "https://github.com/NatLabRockies/bambam"
Documentation = "https://natlabrockies.github.io/bambam"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "nlr.bambam.bambam_py_api"
manifest-path = "rust/bambam-py/Cargo.toml"
# include = [
#     "LICENSE.md",
#     "README.md",
# ]

[tool.mypy]
mypy_path = "python"
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
strict = true
disallow_untyped_calls = false
exclude = ["docs", "build/", "dist/"]


