[workspace]
resolver = "2"
members = [
    "bambam",
    "bambam-core",
    "bambam-gbfs",
    "bambam-gtfs",
    "bambam-gtfs-flex",
    "bambam-omf",
    "bambam-osm",
    "bambam-py",
]

[workspace.dependencies]

arrow = { version = "58.0.0" }
bamcensus = { version = "0.1.0" }
bamcensus-acs = { version = "0.1.0" }
bamcensus-core = { version = "0.1.0" }
bamcensus-lehd = { version = "0.1.0" }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.3.19", features = ["derive"] }
config = "0.15.19"
csv = "1.3.1"
downloader = { version = "0.2.8" }
env_logger = "0.11.8"
flate2 = "1.0"
futures = { version = "0.3.31", features = ["executor"] }
geo = { version = "0.32.0", features = ["use-serde"] }
geo-buffer = "0.2.0"
geo-traits = "0.3.0"
geo-types = "0.7.16"
geozero = { version = "0.14.0", features = ["with-geo", "with-wkb", "with-wkt", "with-geojson"] }
gtfs-structures = "0.43.0"
h3o = { version = "0.9.4", features = ["serde", "geo"] }
hex = "0.4.3"
humantime = "2.3.0"
indexmap = { version = "2.12.0", features = ["serde"] }
inventory = { version = "0.3.21" }
itertools = { version = "0.14.0" }
jsonpath-rust = { version = "1.0.4" }
kdam = "0.6.3"
log = "0.4.19"
num-traits = "0.2.19"
object_store = { "version" = "0.13.2", features = ["aws"] }
opening-hours-syntax = "1.1.5"
ordered-float = { version = "5.1.0", features = ["serde"] }
osmio = "0.14.0"
osmpbf = "0.3.4"
parquet = { version = "=58.0.0", features = ["snap", "async", "object_store"] }
rand = "0.10.0"
rayon = "1.10.0"
regex = { version = "1.11.1" }
reqwest = { version = "0.12.12", features = ["blocking"] }
routee-compass = { version = "0.19.2" }
routee-compass-core = { version = "0.19.2" }
routee-compass-macros = { version = "0.19.2" }
routee-compass-powertrain = { version = "0.19.2" }
routee-compass-py = { version = "0.19.2" }
rstar = { version = "0.12.2" }
sanitize-filename = "0.6.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_arrow = { version = "0.14.0", features = ["arrow-58"] }
serde_bytes = { version = "0.11.19" }
serde_json = { version = "1.0" }
serde_with = { version = "3.0", features = ["chrono_0_4"] }
shapefile = { version = "0.7.0", features = ["geo-types"] }
skiplist = "0.5.1"
thiserror = "2.0.17"
tokio = "1.39.2"
toml = { version = "0.9.8" }
uom = { version = "=0.38.0", features = ["serde"] }
zip = "5.1.1"
