[package]
name = "bambam-core"
version = "0.2.3"
edition = "2021"
license = "BSD-3-Clause"
exclude = ["test", "**/.DS_Store", "target/"]
readme = "README.md"
repository = "https://github.com/NatLabRockies/bambam"
documentation = "https://docs.rs/bambam"
description = "The Behavior and Advanced Mobility Big Access Model"
keywords = ["nlr", "access-model", "accessibility", "multimodal", "transit"]
categories = ["command-line-utilities", "science", "science::geo"]

[dependencies]
chrono = { workspace = true }
geo = { workspace = true }
geo-traits = { workspace = true }
geo-types = { workspace = true }
geojson = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
routee-compass = { workspace = true }
routee-compass-core = { workspace = true }
routee-compass-powertrain = { workspace = true }
rstar = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uom = { workspace = true }
wkb = { workspace = true }
wkt = { workspace = true }
