[package]
name = "bambam-gtfs-flex"
version = "0.2.4"
edition = "2021"
license = "BSD-3-Clause"
description = "Simple GTFS-Flex scanner"
repository = "https://github.com/NREL/bambam"
readme = "README.md"

[features]
default = ["type4"]
type4 = ["dep:gtfs-structures"]

[dependencies]
bambam-core = { version = "0.2.3", path = "../bambam-core" } 
chrono = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
geo = { workspace = true }
geo-types = { workspace = true }
geozero = { workspace = true }
gtfs-structures = { workspace = true, optional = true }
kdam = { workspace = true }
log = { workspace = true }
ordered-float = { workspace = true }
routee-compass-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
skiplist = { workspace = true }
thiserror = { workspace = true }
uom = { workspace = true }
zip = { workspace = true }
# No external dependencies needed for the simple version
