[package]
name = "bambam-gtfs"
version = "0.2.3"
edition = "2021"
license = "BSD-3-Clause"
exclude = ["test", "**/.DS_Store", "target/"]
readme = "README.md"
repository = "https://github.com/NatLabRockies/bambam"
documentation = "https://docs.rs/bambam-gtfs"
description = "GTFS Command Line Utilities for The Behavior and Advanced Mobility Big Access Model"
keywords = [
    "nlr",
    "access-model",
    "accessibility",
    "multimodal",
    "transit",
]
categories = ["command-line-utilities", "science", "science::geo"]

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
csv = { workspace = true }
downloader = { workspace = true }
env_logger = { workspace = true }
flate2 = { workspace = true }
geo = { workspace = true }
geojson = { workspace = true }
gtfs-structures = { workspace = true }
h3o = { workspace = true }
itertools = { workspace = true }
kdam = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
routee-compass-core = { workspace = true }
rstar = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
skiplist = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uom = { workspace = true }
wkb = { workspace = true }
wkt = { workspace = true }
zip = { workspace = true }
