[package]
name = "bambam-osm"
version = "0.2.3"
edition = "2021"
license = "BSD-3-Clause"
exclude = ["test", "**/.DS_Store", "target/"]
readme = "README.md"
repository = "https://github.com/NatLabRockies/bambam"
documentation = "https://docs.rs/bambam-osm"
description = "OpenStreetMaps support for The Behavior and Advanced Mobility Big Access Model"
keywords = [
    "nlr",
    "access-model",
    "accessibility",
    "multimodal",
    "transit",
]
categories = ["command-line-utilities", "science", "science::geo"]

[dependencies]
bamcensus = { workspace = true }
bamcensus-acs = { workspace = true }
bamcensus-core = { workspace = true }

clap = { workspace = true }
config = { workspace = true }
csv = { workspace = true }
env_logger = { workspace = true }
flate2 = { workspace = true }
geo = { workspace = true }
geo-buffer = { workspace = true }
gtfs-structures = { workspace = true }
h3o = { workspace = true }
itertools = { workspace = true }
kdam = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
osmio = { workspace = true }
osmpbf = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
routee-compass = { workspace = true }
routee-compass-core = { workspace = true }
routee-compass-powertrain = { workspace = true }
rstar = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
uom = { workspace = true }
wkt = { workspace = true }
