[package]
name = "bambam-py"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
bambam = { path = "../bambam", version = "0.2.1" }
chrono = { workspace = true }
config = { workspace = true }
inventory = { workspace = true }

itertools = { workspace = true }

pyo3 = { version = "0.28.0", features = ["extension-module", "serde"] }
routee-compass = { workspace = true }
routee-compass-core = { workspace = true }
routee-compass-macros = { workspace = true }
routee-compass-py = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
