[package]
name = "bambam-py"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
bambam = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
inventory = { workspace = true }

itertools = { workspace = true }

pyo3 = { workspace = true }
routee-compass = { workspace = true, default-features = false }
routee-compass-core = { workspace = true }
routee-compass-macros = { workspace = true }
routee-compass-py = { workspace = true, default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
