[package]
name = "bambam"
version = "0.2.3"
edition = "2021"
license = "BSD-3-Clause"
exclude = ["test", "**/.DS_Store", "target/"]
readme = "README.md"
repository = "https://github.com/NatLabRockies/bambam"
documentation = "https://docs.rs/bambam"
description = "The Behavior and Advanced Mobility Big Access Model"
keywords = [
    "nlr",
    "access-model",
    "accessibility",
    "multimodal",
    "transit",
]
categories = ["command-line-utilities", "science", "science::geo"]

[dependencies]
bambam-core = { version = "0.2.3", path = "../bambam-core" }
bambam-gbfs = { version = "0.2.3", path = "../bambam-gbfs" } 
bambam-gtfs-flex = { version = "0.2.3", path = "../bambam-gtfs-flex" } 
bambam-omf = { version = "0.2.3", path = "../bambam-omf" }
bambam-osm = { version = "0.2.3", path = "../bambam-osm" }
bamcensus = { workspace = true }
bamcensus-acs = { workspace = true }
bamcensus-core = { workspace = true }
bamcensus-lehd = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
csv = { workspace = true }
# rusqlite = { workspace = true}

env_logger = { workspace = true }
flate2 = { workspace = true }
geo = { workspace = true }
geo-traits = { workspace = true }
geo-types = { workspace = true }
geojson = { workspace = true }
gtfs-structures = { workspace = true }

h3o = { workspace = true }
hex = { workspace = true }
inventory = { workspace = true }
itertools = { workspace = true }
jsonpath-rust = { workspace = true }
kdam = { workspace = true }
log = { workspace = true }
rand = { workspace = true }

rayon = { workspace = true }
regex = { workspace = true }
routee-compass = { workspace = true }
routee-compass-core = { workspace = true }
routee-compass-powertrain = { workspace = true }

rstar = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
shapefile = { workspace = true }
skiplist = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }

uom = { workspace = true }
wkb = { workspace = true }
wkt = { workspace = true }
zip = { workspace = true }
